--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -178,6 +178,63 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="picCell" rowHeight="135" id="0Tx-nC-Eio" customClass="ZXFoodImageCell">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0Tx-nC-Eio" id="fCo-Ax-8lG">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="q2V-Ml-io8">
+                                                    <rect key="frame" x="134" y="40" width="295" height="110"/>
+                                                    <state key="normal" backgroundImage="food_picadd">
+                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </state>
+                                                </button>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="food_picadd" translatesAutoresizingMaskIntoConstraints="NO" id="iQT-rD-exd">
+                                                    <rect key="frame" x="153" y="12" width="295" height="110"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="110" id="rhj-0w-cgK"/>
+                                                        <constraint firstAttribute="width" constant="295" id="yaT-Jt-jZm"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xcu-71-mPs">
+                                                    <rect key="frame" x="153" y="102" width="295" height="20"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" alpha="0.69999999999999996" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="food_picnum_bg" translatesAutoresizingMaskIntoConstraints="NO" id="30O-9Y-yfm">
+                                                            <rect key="frame" x="0.0" y="0.0" width="295" height="20"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="共6张" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gS3-Mk-cRI">
+                                                            <rect key="frame" x="5" y="0.0" width="281" height="20"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="295" id="4od-Ah-dfD"/>
+                                                        <constraint firstAttribute="height" constant="20" id="6nX-Lp-kyQ"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="Xcu-71-mPs" secondAttribute="bottom" constant="4" id="65I-oh-R9t"/>
+                                                <constraint firstAttribute="centerY" secondItem="iQT-rD-exd" secondAttribute="centerY" id="Hhb-1f-SDk"/>
+                                                <constraint firstAttribute="centerX" secondItem="Xcu-71-mPs" secondAttribute="centerX" id="KQV-Jn-dgL"/>
+                                                <constraint firstAttribute="centerX" secondItem="iQT-rD-exd" secondAttribute="centerX" id="fGl-nf-ZIF"/>
+                                            </constraints>
+                                            <variation key="default">
+                                                <mask key="subviews">
+                                                    <exclude reference="q2V-Ml-io8"/>
+                                                </mask>
+                                            </variation>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="logoImage" destination="iQT-rD-exd" id="6uw-Ed-HMl"/>
+                                            <outlet property="numLabel" destination="gS3-Mk-cRI" id="DO2-QE-uEv"/>
+                                            <outlet property="numView" destination="Xcu-71-mPs" id="V42-MI-3lA"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="PkO-zk-dnL" id="vVH-QC-gBR"/>
@@ -199,7 +256,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L5D-87-HhN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="753" y="1593"/>
+            <point key="canvasLocation" x="753" y="1589"/>
         </scene>
         <!--Announcement Detail View Controller-->
         <scene sceneID="fNx-zE-GU7">
@@ -565,7 +622,7 @@
                                             <color key="textColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zIv-U5-ZIe" customClass="UIPlaceHolderTextView">
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zIv-U5-ZIe" customClass="UIPlaceHolderTextView">
                                             <rect key="frame" x="0.0" y="38" width="600" height="83"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
@@ -746,6 +803,8 @@
     <resources>
         <image name="checkmark_n" width="16" height="16"/>
         <image name="checkmark_s" width="16" height="16"/>
+        <image name="food_picadd" width="295" height="110"/>
+        <image name="food_picnum_bg" width="295" height="20"/>
         <image name="ic__announcement_school" width="30" height="16"/>
         <image name="textField_breakline" width="320" height="1"/>
     </resources>
