--- a/Aier360/Controllers/校园/公告/Announcement.storyboard
+++ b/Aier360/Controllers/校园/公告/Announcement.storyboard
@@ -583,6 +583,146 @@
             </objects>
             <point key="canvasLocation" x="2075" y="182"/>
         </scene>
+        <!--Food Image Picker View Controller-->
+        <scene sceneID="p0x-BY-LBK">
+            <objects>
+                <viewController storyboardIdentifier="ZXFoodImagePickerViewController" id="SCQ-iH-ojS" customClass="ZXFoodImagePickerViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="oXb-v2-EUc"/>
+                        <viewControllerLayoutGuide type="bottom" id="y6F-Ua-UMi"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="fTZ-7Y-KPn">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.29999999999999999" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E39-aO-hdS">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p8e-1h-CKe">
+                                <rect key="frame" x="0.0" y="300" width="600" height="300"/>
+                                <subviews>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2MW-Zk-fT3">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="iby-v6-5th"/>
+                                        </constraints>
+                                        <items>
+                                            <barButtonItem systemItem="cancel" id="qjx-Ac-W7P">
+                                                <connections>
+                                                    <action selector="cancelAction:" destination="SCQ-iH-ojS" id="tut-MT-rDK"/>
+                                                </connections>
+                                            </barButtonItem>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="cc2-rw-TKw"/>
+                                            <barButtonItem style="done" systemItem="done" id="RAw-ef-cX3">
+                                                <connections>
+                                                    <action selector="doneAction:" destination="SCQ-iH-ojS" id="CDw-xG-zLM"/>
+                                                </connections>
+                                            </barButtonItem>
+                                        </items>
+                                    </toolbar>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="zPc-oT-v1a">
+                                        <rect key="frame" x="0.0" y="44" width="600" height="256"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ZXImagePickCell" rowHeight="80" id="iYQ-oZ-Ucm" customClass="ZXImagePickCell">
+                                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="iYQ-oZ-Ucm" id="zyg-7n-MFa">
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" scrollEnabled="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wHo-VW-sfT">
+                                                            <rect key="frame" x="-1" y="0.0" width="600" height="79"/>
+                                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="1bc-Wj-ee1">
+                                                                <size key="itemSize" width="50" height="50"/>
+                                                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                                            </collectionViewFlowLayout>
+                                                            <cells>
+                                                                <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="PPn-nW-dTS" customClass="ZXBaseCollectionViewCell">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                    <autoresizingMask key="autoresizingMask"/>
+                                                                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                        <autoresizingMask key="autoresizingMask"/>
+                                                                        <subviews>
+                                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ryx-pq-Gm7">
+                                                                                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                                                            </imageView>
+                                                                        </subviews>
+                                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                                    </view>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="bottomMargin" secondItem="ryx-pq-Gm7" secondAttribute="bottom" constant="-8" id="H1W-1p-ozm"/>
+                                                                        <constraint firstItem="ryx-pq-Gm7" firstAttribute="top" secondItem="PPn-nW-dTS" secondAttribute="topMargin" constant="-8" id="X4l-yG-4O7"/>
+                                                                        <constraint firstItem="ryx-pq-Gm7" firstAttribute="leading" secondItem="PPn-nW-dTS" secondAttribute="leadingMargin" constant="-8" id="gDy-nj-VgN"/>
+                                                                        <constraint firstAttribute="trailingMargin" secondItem="ryx-pq-Gm7" secondAttribute="trailing" constant="-8" id="w76-mB-Ayu"/>
+                                                                    </constraints>
+                                                                    <connections>
+                                                                        <outlet property="imageView" destination="ryx-pq-Gm7" id="qZq-6f-Ywm"/>
+                                                                    </connections>
+                                                                </collectionViewCell>
+                                                            </cells>
+                                                            <connections>
+                                                                <outlet property="dataSource" destination="iYQ-oZ-Ucm" id="wVY-F2-Zbv"/>
+                                                                <outlet property="delegate" destination="iYQ-oZ-Ucm" id="lqx-ZR-xaL"/>
+                                                            </connections>
+                                                        </collectionView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="wHo-VW-sfT" secondAttribute="trailing" constant="-7" id="835-XP-Ids"/>
+                                                        <constraint firstAttribute="bottom" secondItem="wHo-VW-sfT" secondAttribute="bottom" id="EWz-vo-pkr"/>
+                                                        <constraint firstItem="wHo-VW-sfT" firstAttribute="leading" secondItem="zyg-7n-MFa" secondAttribute="leadingMargin" constant="-9" id="kXD-rU-cLI"/>
+                                                        <constraint firstItem="wHo-VW-sfT" firstAttribute="top" secondItem="zyg-7n-MFa" secondAttribute="top" id="s4n-ga-3px"/>
+                                                    </constraints>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <outlet property="collectionView" destination="wHo-VW-sfT" id="mdl-hk-Qpl"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="SCQ-iH-ojS" id="mJk-m5-dWN"/>
+                                            <outlet property="delegate" destination="SCQ-iH-ojS" id="EcO-9k-4xM"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="zPc-oT-v1a" firstAttribute="top" secondItem="2MW-Zk-fT3" secondAttribute="bottom" id="2Yi-wa-hJy"/>
+                                    <constraint firstAttribute="height" constant="300" id="5dG-0B-EaF"/>
+                                    <constraint firstAttribute="trailing" secondItem="zPc-oT-v1a" secondAttribute="trailing" id="GKR-PW-Ggg"/>
+                                    <constraint firstItem="2MW-Zk-fT3" firstAttribute="top" secondItem="p8e-1h-CKe" secondAttribute="top" id="RdV-hn-uoH"/>
+                                    <constraint firstAttribute="bottom" secondItem="zPc-oT-v1a" secondAttribute="bottom" id="ZP4-dV-xrc"/>
+                                    <constraint firstItem="zPc-oT-v1a" firstAttribute="leading" secondItem="p8e-1h-CKe" secondAttribute="leading" id="ZyN-C6-Tej"/>
+                                    <constraint firstAttribute="trailing" secondItem="2MW-Zk-fT3" secondAttribute="trailing" id="f3e-nl-oTZ"/>
+                                    <constraint firstItem="2MW-Zk-fT3" firstAttribute="leading" secondItem="p8e-1h-CKe" secondAttribute="leading" id="iR6-b3-muy"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="E39-aO-hdS" secondAttribute="trailing" constant="-16" id="CXF-la-aBO"/>
+                            <constraint firstItem="p8e-1h-CKe" firstAttribute="trailing" secondItem="E39-aO-hdS" secondAttribute="trailing" id="KHi-HA-3l9"/>
+                            <constraint firstItem="p8e-1h-CKe" firstAttribute="leading" secondItem="E39-aO-hdS" secondAttribute="leading" id="Md3-aj-szG"/>
+                            <constraint firstItem="E39-aO-hdS" firstAttribute="leading" secondItem="fTZ-7Y-KPn" secondAttribute="leadingMargin" constant="-16" id="Per-MY-3sH"/>
+                            <constraint firstItem="E39-aO-hdS" firstAttribute="top" secondItem="fTZ-7Y-KPn" secondAttribute="topMargin" id="q44-03-1Cy"/>
+                            <constraint firstItem="y6F-Ua-UMi" firstAttribute="top" secondItem="E39-aO-hdS" secondAttribute="bottom" id="sHz-dD-ZqN"/>
+                            <constraint firstItem="y6F-Ua-UMi" firstAttribute="top" secondItem="p8e-1h-CKe" secondAttribute="bottom" id="uk0-XH-fcB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="maskView" destination="E39-aO-hdS" id="Afq-Ic-kmF"/>
+                        <outlet property="pickView" destination="p8e-1h-CKe" id="X1D-4N-TT2"/>
+                        <outlet property="tableView" destination="zPc-oT-v1a" id="IZv-NJ-8GL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="25A-yV-sQO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1451" y="1589"/>
+        </scene>
         <!--Add Announcement View Controller-->
         <scene sceneID="QvO-u8-Gl2">
             <objects>
