--- a/Aier360/Views/ZXFoodTitleView.xib
+++ b/Aier360/Views/ZXFoodTitleView.xib
@@ -40,6 +40,9 @@
                         <color key="titleColor" red="0.51764705879999995" green="0.51764705879999995" blue="0.52549019610000003" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <connections>
+                        <action selector="editFood:" destination="-2" eventType="touchUpInside" id="TTQ-NE-7p7"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
